--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="hero-right">
                 <p>I'm a recent graduate from Geological Engineering at Diponegoro University, with a deep interest in technology and mining. With the problem solving and leadership skills that I developed during my studies, as well as my passion in learning new things, I am ready to bring these values to the industry, contributing in improving efficiency and innovation in the world of technology and mining.</p>
                 <ul>
-                    <li><a href="/CV/CV.pdf" target="_blank"><button class="button">Download My Resume</button></a>
+                    <li><a href="https://drive.google.com/drive/u/0/folders/1dc17jMa_nFv6HyjH4JyuYU-Znax9_oN-" target="_blank"><button class="button">Download My Resume</button></a>
                     </li>
                 </ul>
             </div>
